Use a lower line height for shorter search boxes to avoid overflow and visual breakage.

--- a/client/components/search/style.scss
+++ b/client/components/search/style.scss
@@ -104,7 +104,7 @@
 }
 
 .search__input[type='search'] {
-	line-height: 3;
+	line-height: 2;
 	flex: 1 1 auto;
 	display: none;
 	z-index: z-index( '.search', '.search__input' );
